--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <span id="result"></span>
             
             <footer>
-                &#169; This Calculator belongs to Jason XU
+                &#169; This Calculator belongs to Carolina
             </footer>
         </div>
     </body>
