Peer-graded Assignment

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <span id="result"></span>
             
             <footer>
-                &#169; This Calculator belongs to Carolina - Everyone Can Get Rich
+                &#169; This Calculator belongs to Carolina  Everyone Can Get Rich
             </footer>
         </div>
     </body>
